--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,9 @@
          location permissions for the 'MyLocation' functionality. 
     -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
@@ -41,11 +44,14 @@
         <activity
             android:name=".view.MapsActivity"
             android:label="@string/title_activity_maps">
-
         </activity>
-
         <activity android:name=".view.WeatherActivity">
         </activity>
+
+        <service
+            android:name=".MyService"
+            android:exported="false">
+        </service>
     </application>
 
 </manifest>
